--- a/react-context-api/index.html
+++ b/react-context-api/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ni3rav/eddy-css@main/css/eddy.min.css"/>
-    <title>ToDo</title>
+    <title>Context API</title>
   </head>
   <body>
     <div id="root"></div>
