--- a/contextapi-2/index.html
+++ b/contextapi-2/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Change the goddamn theme</title>
+    <title>Theme switcher using CONTEXT API</title>
   </head>
-  <body>
+  <body bgcolor="aquamarine">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
