--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ni3rav/eddy-css@main/css/eddy.min.css"/>
-    <title>ToDo</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
